# NMEA-Protocol-Server

./: .gitignore  CMakeLists.txt  README.md  Toolchain-RaspberryPi.cmake
src/: CMakeLists.txt  main.cpp
src/AIS/: AISmsg.cpp  AISmsg.h  PositionReportClassBmsg.cpp  PositionReportClassBmsg.h  PositionReportmsg.cpp  PositionReportmsg.h  StaticVoyageRelatedmsg.cpp  StaticVoyageRelatedmsg.h
src/Config/: ConfigEndpoint.cpp  ConfigEndpoint.h
src/File/: FileEndpoint.cpp  FileEndpoint.h
src/NMEA/: AISEndpoint.cpp  AISEndpoint.h  AIVDOEndpoint.cpp  AIVDOEndpoint.h  CompassEndpoint.cpp  CompassEndpoint.h  GPSEndpoint.cpp  GPSEndpoint.h  InputCompressorMidpoint.cpp  InputCompressorMidpoint.h  MemoryStoreEndpoint.cpp  MemoryStoreEndpoint.h  NMEAEndpoint.cpp  NMEAEndpoint.h  NMEAMidpoint.cpp  NMEAMidpoint.h  NMEAServer.cpp  NMEAServer.h  NMEAmsg.cpp  NMEAmsg.h  TimeEndpoint.cpp  TimeEndpoint.h
src/NMEA/Messages/: AIVDmsg.cpp  AIVDmsg.h  HDMmsg.cpp  HDMmsg.h  RMCmsg.cpp  RMCmsg.h  ZDAmsg.cpp  ZDAmsg.h  navobjects.cpp  navobjects.h
src/NMEA/Support/: Vessel.cpp  Vessel.h
src/Serial/: SerialPort.cpp  SerialPort.h
src/Support/: Answer.cpp  Answer.h  AsyncEndpoint.cpp  AsyncEndpoint.h  Callback.cpp  Callback.h  Command.cpp  Command.h  CommandEndpoint.cpp  CommandEndpoint.h  Endpoint.cpp  Endpoint.h  IOServicePool.cpp  IOServicePool.h  Message.cpp  Message.h
src/TCP/: TCPServer.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h
